--- a/app/scripts/config/UIconfig.json
+++ b/app/scripts/config/UIconfig.json
@@ -34,7 +34,7 @@
 		"loginPage":{
 			"hideCommunityDetails": false,
 			"releaseDetails": false,
-			"companyName": ""
+			"companyName": "hallopaysacco"
 		}
 	}
   }
